--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <style>
     :root {
+      --accent: #1cb34b;
+      --bg-dark: #ffffff;
+      --bg-light: #f4f4f4;
+      --text-light: #333333;
+      --gold: #bfa14b;
+      --font-main: 'Segoe UI', sans-serif;
+    }
+
+    :root {
       --accent: #31d158;
       --bg-dark: #0f0f0f;
       --bg-light: #1a1a1a;
@@ -20,6 +29,7 @@
     * { box-sizing: border-box; }
 
     body {
+      background: var(--bg-dark); color: var(--text-light);
       margin: 0;
       font-family: var(--font-main);
       background: var(--bg-dark);
@@ -28,6 +38,7 @@
     }
 
     header {
+      background: var(--accent); color: white;
       background: rgba(0, 0, 0, 0.9);
       padding: 15px 30px;
       position: sticky;
@@ -44,6 +55,7 @@
     }
 
     nav a {
+      color: white;
       color: var(--accent);
       text-decoration: none;
       font-weight: 600;
@@ -51,6 +63,7 @@
     }
 
     nav a:hover {
+      color: var(--gold);
       color: #fff;
       text-decoration: underline;
     }
@@ -161,28 +174,6 @@
     .text-center {
       text-align: center;
     }
-  
-    .faq-item {
-      background: #1e1e1e;
-      border-radius: 10px;
-      margin-bottom: 15px;
-      cursor: pointer;
-      padding: 15px;
-      transition: all 0.3s ease;
-    }
-    .faq-question {
-      font-weight: bold;
-      color: #31d158;
-    }
-    .faq-answer {
-      display: none;
-      padding-top: 10px;
-      color: #ccc;
-    }
-    .faq-item.open .faq-answer {
-      display: block;
-    }
-
   </style>
 </head>
 <body>
@@ -198,13 +189,13 @@
 
   <section class="hero" data-aos="zoom-in">
     <div>
-      <h1>Официальный техосмотр в Уфе</h1>
+      <h1 style='color: var(--gold); text-shadow: 0 0 2px #bfa14b;'>Официальный техосмотр в Уфе</h1>
       <p>Сертифицированный пункт. Карта ЕАИСТО. ОСАГО без проблем.</p>
     </div>
   </section>
 
   <section id="services" class="section" data-aos="fade-up">
-    <h2>Категории ТС</h2>
+    <h2 style='color: var(--gold);'>Категории ТС</h2>
     <div class="cards">
       <div class="card"><i class="fas fa-car fa-2x" style="color:#31d158;margin-bottom:10px;"></i><h3>M1</h3><p>Легковые авто до 8 мест</p></div>
       <div class="card"><i class="fas fa-truck fa-2x" style="color:#31d158;margin-bottom:10px;"></i><h3>N1</h3><p>Грузовики до 3,5 тонн</p></div>
@@ -213,17 +204,17 @@
   </section>
 
   <section id="about" class="section" data-aos="fade-up">
-    <h2>О компании</h2>
+    <h2 style='color: var(--gold);'>О компании</h2>
     <p class="text-center">Работаем по ФЗ №170 с фотофиксацией. Выдача карты в ЕАИСТО в день осмотра. Надёжно, быстро, без переплат.</p>
   </section>
 
   
   <section id="about-inspection" class="section" data-aos="fade-up">
-    <h2>О техосмотре</h2>
+    <h2 style='color: var(--gold);'>О техосмотре</h2>
     <p class="text-center" style="max-width: 800px; margin: auto; line-height: 1.6;">
       Все находящиеся в эксплуатации дорожные транспортные средства должны регулярно проходить технический осмотр для проверки соответствия технического состояния и оборудования транспортных средств требованиям безопасности дорожного движения.
       <br><br>
-      <strong>Куда обратиться?</strong> Техосмотр проводится организацией (оператором технического осмотра), прошедшим аккредитацию по проведению технического осмотра соответствующей категории транспортных средств. Проводит аккредитацию профессиональное объединение страховщиков.
+      <strong style='color: var(--gold);'>Куда обратиться?</strong> Техосмотр проводится организацией (оператором технического осмотра), прошедшим аккредитацию по проведению технического осмотра соответствующей категории транспортных средств. Проводит аккредитацию профессиональное объединение страховщиков.
       <br><br>
       Граждане и юридические лица вправе обратиться к любому оператору независимо от места регистрации транспортного средства.
     </p>
@@ -231,30 +222,53 @@
     <div class="faq" style="margin-top: 40px; max-width: 800px; margin-left: auto; margin-right: auto;">
       <div class="faq-item" onclick="this.classList.toggle('open')">
         <div class="faq-question">Как часто нужно проходить техосмотр?</div>
-        <div class="faq-answer">Для новых автомобилей — через 4 года, далее — каждые 2 года. Для такси, автобусов, грузовиков — ежегодно.</div>
+        <div class="faq-answer">Регулярность прохождения техосмотра зависит от возраста и назначения транспортного средства. Новые легковые автомобили проходят ТО впервые через 4 года с даты выпуска, затем — каждые 2 года. Коммерческие автомобили, автобусы и такси проходят техосмотр ежегодно. Мотоциклы — каждые 2 года после 4 лет эксплуатации.</div>
       </div>
       <div class="faq-item" onclick="this.classList.toggle('open')">
-        <div class="faq-question">Что нужно для прохождения ТО?</div>
-        <div class="faq-answer">Паспорт, СТС/ПТС и доверенность (если вы не собственник).</div>
+        <div class="faq-question">Что нужно для прохождения технического осмотра?</div>
+        <div class="faq-answer">Для прохождения техосмотра потребуется:
+          <ul style='padding-left: 20px;'>
+            <li>Паспорт гражданина РФ или иного удостоверяющего документа</li>
+            <li>ПТС или СТС (свидетельство о регистрации ТС)</li>
+            <li>Доверенность (если осмотр проходит не владелец)</li>
+            <li>Оплата услуги (возможна безналичная оплата)</li>
+          </ul>
+        </div>
       </div>
       <div class="faq-item" onclick="this.classList.toggle('open')">
-        <div class="faq-question">Где посмотреть диагностическую карту?</div>
-        <div class="faq-answer">Она автоматически попадает в базу ЕАИСТО. Вы можете проверить её по VIN на сайте gibdd.ru.</div>
+        <div class="faq-question">Что проверяется при техосмотре?</div>
+        <div class="faq-answer">Проверяется соответствие транспортного средства обязательным требованиям безопасности:
+          <ul style='padding-left: 20px;'>
+            <li>Работа тормозной системы</li>
+            <li>Световые приборы и стеклоочистители</li>
+            <li>Ремни безопасности и подушки</li>
+            <li>Состояние шин и протектора</li>
+            <li>Отсутствие течей жидкостей и коррозии</li>
+          </ul>
+        </div>
+      </div>
+      <div class="faq-item" onclick="this.classList.toggle('open')">
+        <div class="faq-question">Что такое диагностическая карта?</div>
+        <div class="faq-answer">Это официальный документ, подтверждающий прохождение техосмотра. В карте указывается состояние всех основных систем автомобиля. После прохождения ТО, карта вносится в базу ЕАИСТО, и по ней возможно оформление ОСАГО.</div>
+      </div>
+      <div class="faq-item" onclick="this.classList.toggle('open')">
+        <div class="faq-question">Где можно проверить свою карту?</div>
+        <div class="faq-answer">Диагностическая карта сразу после оформления появляется в федеральной базе ЕАИСТО. Проверить её можно на сайте ГИБДД по VIN или номеру кузова: <a href='https://gibdd.ru' target='_blank'>gibdd.ru</a></div>
       </div>
     </div>
   </section>
 
   <section id="benefits" class="section" data-aos="fade-up">
-    <h2>Наши преимущества</h2>
+    <h2 style='color: var(--gold);'>Наши преимущества</h2>
     <div class="cards">
-      <div class="card"><i class="fas fa-certificate fa-2x" style="color:#31d158;margin-bottom:10px;"></i><strong>Аккредитация РСА</strong><br>Бессрочный аттестат</div>
-      <div class="card"><i class="fas fa-file-signature fa-2x" style="color:#31d158;margin-bottom:10px;"></i><strong>Оформим ОСАГО</strong><br>Без беготни по сервисам</div>
-      <div class="card"><i class="fas fa-briefcase fa-2x" style="color:#31d158;margin-bottom:10px;"></i><strong>10+ лет опыта</strong><br>С 2013 года на рынке</div>
+      <div class="card"><i class="fas fa-certificate fa-2x" style="color:#31d158;margin-bottom:10px;"></i><strong style='color: var(--gold);'>Аккредитация РСА</strong><br>Бессрочный аттестат</div>
+      <div class="card"><i class="fas fa-file-signature fa-2x" style="color:#31d158;margin-bottom:10px;"></i><strong style='color: var(--gold);'>Оформим ОСАГО</strong><br>Без беготни по сервисам</div>
+      <div class="card"><i class="fas fa-briefcase fa-2x" style="color:#31d158;margin-bottom:10px;"></i><strong style='color: var(--gold);'>10+ лет опыта</strong><br>С 2013 года на рынке</div>
     </div>
   </section>
 
   <section id="prices" class="section" data-aos="fade-up">
-    <h2>Стоимость ТО</h2>
+    <h2 style='color: var(--gold);'>Стоимость ТО</h2>
     <div class="cards">
       <div class="card"><i class="fas fa-car fa-2x" style="color:#31d158;margin-bottom:10px;"></i><h3>M1</h3><p>1050,79 ₽ / 30 мин</p></div>
       <div class="card"><i class="fas fa-truck fa-2x" style="color:#31d158;margin-bottom:10px;"></i><h3>N1</h3><p>1133,04 ₽ / 32 мин</p></div>
@@ -264,7 +278,7 @@
   </section>
 
   <section id="contacts" class="section" data-aos="fade-up">
-    <h2>Контакты</h2>
+    <h2 style='color: var(--gold);'>Контакты</h2>
     <p class="text-center">📍 Уфа, ул. Новочеркасская, 13/2<br>📞 +7 (987) 258‑92‑38<br>✉ ufa.tehosmotr@yandex.ru</p>
     <form class="contact-form" action="https://formspree.io/f/mwkgrvko" method="POST">
       <input type="text" name="name" placeholder="Ваше имя" required>
