--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Техосмотр • Зелёный стиль</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     :root {
       --green: #11a021;
       --yellow: #ffe13e;
       --white: #fff;
-      --text: #222;
+      --text: #232323;
       --menu-height: 68px;
     }
     body {
@@ -35,19 +35,12 @@
     }
     .pattern-wrap {
       width: 100%;
-      height: 50px;
+      height: 60px;
       position: relative;
       overflow: hidden;
       margin-top: -14px;
       z-index: 1;
-    }
-    .pattern-img {
-      width: 100%;
-      height: auto;
-      display: block;
-      position: absolute;
-      left: 0; bottom: 0;
-      z-index: 1;
+      line-height: 0;
     }
     nav.navbar {
       background: var(--white);
@@ -74,9 +67,272 @@
       background: var(--green);
       color: var(--white);
     }
+    .container {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 0 16px;
+    }
+    .hero-row {
+      display: flex;
+      gap: 40px;
+      align-items: flex-start;
+      justify-content: center;
+      margin: 60px 0 30px 0;
+      flex-wrap: wrap;
+    }
+    .hero-main {
+      flex: 1.5;
+      min-width: 320px;
+    }
+    .hero-main h1 {
+      font-size: 2.3rem;
+      color: var(--green);
+      margin-bottom: 10px;
+      font-weight: 700;
+      line-height: 1.15;
+      letter-spacing: 0.01em;
+    }
+    .hero-main .subtitle {
+      font-size: 1.15rem;
+      color: var(--yellow);
+      margin-bottom: 10px;
+    }
+    .hero-main .desc {
+      color: #333;
+      font-size: 1.07rem;
+      margin-bottom: 25px;
+      opacity: .91;
+    }
+    .hero-card {
+      flex: 1;
+      background: #e8fbe6;
+      border-radius: 18px;
+      box-shadow: 0 6px 24px #0002;
+      padding: 28px 28px 18px 28px;
+      min-width: 320px;
+      margin-top: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+      max-width: 370px;
+    }
+    .hero-card .contacts {
+      font-size: 1rem;
+      margin-bottom: 18px;
+      color: #2a4d32;
+      line-height: 1.6;
+    }
+    .hero-card .contacts strong {
+      color: var(--green);
+      display: block;
+      font-size: 1.1rem;
+      margin-bottom: 6px;
+    }
+    .hero-card .contacts .addr {font-style: italic; margin-bottom: 4px;}
+    .hero-card .contacts .wa-link {
+      color: #3edb5b;
+      text-decoration: none;
+      font-size: 1.13em;
+      margin-left: 7px;
+    }
+    .hero-card form {
+      display: flex; flex-direction: column;
+      gap: 12px;
+      margin-bottom: 6px;
+    }
+    .hero-card input {
+      padding: 11px 14px;
+      border-radius: 7px;
+      border: 1px solid #d0e6d0;
+      font-size: 1em;
+      background: #fff;
+      color: var(--text);
+      outline: none;
+      margin-bottom: 2px;
+    }
+    .hero-card input:focus {box-shadow: 0 0 0 2px var(--green);}
+    .hero-card button {
+      padding: 13px 0;
+      font-weight: bold;
+      font-size: 1.05em;
+      background: var(--green);
+      border: none;
+      color: #fff;
+      border-radius: 7px;
+      cursor: pointer;
+      transition: background 0.19s;
+      margin-top: 3px;
+    }
+    .hero-card button:hover {background: #0b871b;}
+    .hero-card .agree {
+      font-size: 0.95em;
+      color: #678564;
+      opacity: .82;
+      margin-top: 5px;
+      text-align: left;
+    }
+    .hero-card .agree a {
+      color: var(--green); text-decoration: underline;
+    }
+    .hero-card .worktime {
+      margin-top: 9px;
+      color: #ad9402;
+      font-size: 0.98em;
+    }
+    .hero-card .map {
+      margin: 20px 0 0 0;
+      border-radius: 8px;
+      border: none;
+      width: 100%;
+      height: 160px;
+    }
+    .section {
+      margin: 50px 0 0 0;
+      padding-bottom: 0;
+    }
+    .section-title {
+      color: var(--green);
+      font-size: 2rem;
+      text-align: center;
+      margin-bottom: 35px;
+      font-weight: 700;
+      letter-spacing: 0.01em;
+    }
+    .cards-list {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 28px;
+      margin-bottom: 30px;
+    }
+    .card {
+      background: #e8fbe6;
+      border-radius: 13px;
+      min-width: 215px;
+      max-width: 260px;
+      padding: 30px 20px 24px 20px;
+      box-shadow: 0 4px 14px #0001;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      transition: transform .19s;
+    }
+    .card:hover {transform: translateY(-5px) scale(1.02);}
+    .card i {
+      font-size: 2.6em;
+      color: var(--green);
+      margin-bottom: 12px;
+    }
+    .card h3 {
+      margin: 7px 0 6px 0;
+      color: var(--yellow);
+      font-size: 1.18em;
+      font-weight: 600;
+      letter-spacing: .01em;
+    }
+    .card p {
+      color: #333;
+      font-size: 1em;
+      opacity: .87;
+    }
+    .prices-table {
+      margin: 0 auto 20px auto;
+      max-width: 420px;
+      width: 100%;
+      border-radius: 12px;
+      background: #f8fff6;
+      box-shadow: 0 4px 14px #0001;
+      overflow: hidden;
+    }
+    .prices-table table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+    .prices-table th, .prices-table td {
+      padding: 13px 8px;
+      text-align: left;
+      font-size: 1.05em;
+    }
+    .prices-table th {
+      background: #e4f2e2;
+      color: var(--green);
+      font-weight: 700;
+    }
+    .prices-table tr:not(:last-child) td {
+      border-bottom: 1px solid #d0e6d0;
+    }
+    .prices-table td {
+      color: #333;
+    }
+    .prices-table .cat {
+      color: var(--yellow);
+      font-weight: 600;
+      font-size: 1.08em;
+    }
+    .faq {
+      margin: 40px auto 0 auto;
+      max-width: 650px;
+    }
+    .faq-item {
+      background: #e8fbe6;
+      border-radius: 9px;
+      margin-bottom: 12px;
+      padding: 17px 24px;
+      cursor: pointer;
+      color: #2a4d32;
+      box-shadow: 0 2px 8px #0001;
+      transition: background .15s;
+      position: relative;
+      user-select: none;
+    }
+    .faq-item .faq-q {
+      font-weight: 600;
+      font-size: 1.08em;
+      color: var(--green);
+    }
+    .faq-item .faq-toggle {
+      position: absolute; right: 22px; top: 15px;
+      font-size: 1.4em;
+      color: var(--yellow);
+      transition: transform .21s;
+    }
+    .faq-item.open .faq-toggle {
+      transform: rotate(45deg);
+    }
+    .faq-item .faq-a {
+      max-height: 0;
+      overflow: hidden;
+      opacity: 0;
+      transition: max-height .4s, opacity .32s;
+      font-size: 1em;
+      margin-top: 8px;
+    }
+    .faq-item.open .faq-a {
+      max-height: 320px;
+      opacity: 1;
+      margin-top: 13px;
+    }
+    footer {
+      margin-top: 60px;
+      background: #f7faf7;
+      padding: 26px 0;
+      text-align: center;
+      color: #8b8b8b;
+      font-size: 15px;
+    }
+    @media (max-width: 900px) {
+      .hero-row {
+        flex-direction: column;
+        gap: 18px;
+        align-items: stretch;
+      }
+      .hero-card {max-width: none;}
+    }
     @media (max-width: 600px) {
       .main-logo { width: 90px; }
       nav.navbar { gap: 10px; font-size: 0.97em; }
+      .container {padding: 0 4px;}
     }
   </style>
 </head>
@@ -84,7 +340,35 @@
   <header class="main-header">
     <img src="logo.jfif" alt="Логотип" class="main-logo">
     <div class="pattern-wrap">
-      <img src="pattern.jpg" alt="Декоративный паттерн" class="pattern-img">
+      <!-- SVG-паттерн -->
+      <svg width="100%" height="60" viewBox="0 0 340 60" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
+        <rect width="340" height="60" fill="#11a021"/>
+        <polygon points="0,60 0,42 14,60" fill="#fff"/>
+        <polygon points="14,60 7,36 28,60" fill="#fff"/>
+        <polygon points="28,60 22,49 42,60" fill="#fff"/>
+        <polygon points="42,60 35,44 56,60" fill="#fff"/>
+        <polygon points="56,60 53,37 70,60" fill="#fff"/>
+        <polygon points="70,60 65,48 84,60" fill="#fff"/>
+        <polygon points="84,60 80,40 98,60" fill="#fff"/>
+        <polygon points="98,60 96,47 112,60" fill="#fff"/>
+        <polygon points="112,60 110,39 126,60" fill="#fff"/>
+        <polygon points="126,60 120,44 140,60" fill="#fff"/>
+        <polygon points="140,60 138,35 154,60" fill="#fff"/>
+        <polygon points="154,60 150,40 168,60" fill="#fff"/>
+        <polygon points="168,60 162,38 182,60" fill="#fff"/>
+        <polygon points="182,60 178,45 196,60" fill="#fff"/>
+        <polygon points="196,60 192,41 210,60" fill="#fff"/>
+        <polygon points="210,60 204,48 224,60" fill="#fff"/>
+        <polygon points="224,60 220,42 238,60" fill="#fff"/>
+        <polygon points="238,60 234,39 252,60" fill="#fff"/>
+        <polygon points="252,60 248,46 266,60" fill="#fff"/>
+        <polygon points="266,60 260,40 280,60" fill="#fff"/>
+        <polygon points="280,60 278,45 294,60" fill="#fff"/>
+        <polygon points="294,60 290,39 308,60" fill="#fff"/>
+        <polygon points="308,60 304,42 320,60" fill="#fff"/>
+        <polygon points="320,60 318,44 332,60" fill="#fff"/>
+        <polygon points="332,60 326,37 340,60" fill="#fff"/>
+      </svg>
     </div>
   </header>
   <nav class="navbar">
@@ -93,6 +377,147 @@
     <a href="#faq">Вопросы</a>
     <a href="#contacts">Контакты</a>
   </nav>
-  <!-- Далее идут остальные секции... -->
+  <div class="container">
+    <div class="hero-row">
+      <div class="hero-main">
+        <h1>Техосмотр в Уфе<br>ул. Новочеркасская, 13/2</h1>
+        <div class="subtitle">Сертифицированный пункт. Официальная карта ЕАИСТО.</div>
+        <div class="desc">Выдаём диагностическую карту для ОСАГО за 30 минут. Легковые, грузовые и мото. Без очередей и переплат. Работаем строго по 170‑ФЗ.</div>
+      </div>
+      <div class="hero-card">
+        <div class="contacts">
+          <strong>Пункт №102</strong>
+          <div class="addr"><i class="fa fa-map-marker-alt"></i> Уфа, Новочеркасская, 13/2</div>
+          <div><i class="fa fa-phone"></i> <a href="tel:+79872589238" style="color:var(--green);text-decoration:none;">+7 (987) 258-92-38</a>
+            <a class="wa-link" href="https://wa.me/79872589238" target="_blank"><i class="fab fa-whatsapp"></i></a>
+          </div>
+          <div><i class="fa fa-envelope"></i> ufa.tehosmotr@yandex.ru</div>
+        </div>
+        <form action="https://formspree.io/f/mwkgrvko" method="POST" autocomplete="on">
+          <input type="text" name="car" placeholder="Госномер или VIN" required>
+          <input type="text" name="brand" placeholder="Марка/модель авто" required>
+          <input type="text" name="fio" placeholder="Ваше имя" required>
+          <input type="tel" name="tel" placeholder="Телефон" required pattern="[\d\s\-\+\(\)]{6,}">
+          <button type="submit">Записаться на техосмотр</button>
+          <div class="agree">
+            Отправляя заявку, вы соглашаетесь с <a href="#">политикой обработки данных</a>
+          </div>
+        </form>
+        <div class="worktime"><i class="fa fa-clock"></i> Пн–Сб: 9:00–18:00</div>
+        <iframe class="map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ae54ef236f130c882c8f8bfe02f7257dbf897bded7bd9cf57f59a8ef2d7203e03&amp;source=constructor" loading="lazy"></iframe>
+      </div>
+    </div>
+    <section id="services" class="section">
+      <div class="section-title">Услуги и категории</div>
+      <div class="cards-list">
+        <div class="card"><i class="fas fa-car"></i>
+          <h3>M1 – Легковые</h3>
+          <p>Авто до 8 мест<br>1050,79 ₽</p>
+        </div>
+        <div class="card"><i class="fas fa-truck"></i>
+          <h3>N1 – Грузовые</h3>
+          <p>До 3,5 тонн<br>1133,04 ₽</p>
+        </div>
+        <div class="card"><i class="fas fa-motorcycle"></i>
+          <h3>L – Мото</h3>
+          <p>Мотоциклы, мопеды<br>364,07 ₽</p>
+        </div>
+      </div>
+    </section>
+    <section id="prices" class="section">
+      <div class="section-title">Стоимость техосмотра</div>
+      <div class="prices-table">
+        <table>
+          <tr>
+            <th>Категория</th>
+            <th>Цена</th>
+            <th>Время</th>
+          </tr>
+          <tr>
+            <td class="cat">M1</td>
+            <td>1050,79 ₽</td>
+            <td>30 мин</td>
+          </tr>
+          <tr>
+            <td class="cat">N1</td>
+            <td>1133,04 ₽</td>
+            <td>32 мин</td>
+          </tr>
+          <tr>
+            <td class="cat">L</td>
+            <td>364,07 ₽</td>
+            <td>10 мин</td>
+          </tr>
+        </table>
+      </div>
+      <div style="color:#444;text-align:center;font-size:1em;opacity:.77;">Цены по постановлению №554 от 28.12.2024</div>
+    </section>
+    <section id="faq" class="section">
+      <div class="section-title">Часто задаваемые вопросы</div>
+      <div class="faq">
+        <div class="faq-item">
+          <div class="faq-q">Как часто нужно проходить техосмотр?
+            <span class="faq-toggle">+</span>
+          </div>
+          <div class="faq-a">
+            Новые легковые авто проходят ТО впервые через 4 года с выпуска, затем — каждые 2 года. Грузовые и такси — ежегодно. Мотоциклы — каждые 2 года после 4 лет эксплуатации.
+          </div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-q">Что нужно для техосмотра?
+            <span class="faq-toggle">+</span>
+          </div>
+          <div class="faq-a">
+            <ul>
+              <li>Паспорт РФ</li>
+              <li>СТС или ПТС</li>
+              <li>Доверенность (если не владелец)</li>
+              <li>Оплата услуг</li>
+            </ul>
+          </div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-q">Что такое диагностическая карта?
+            <span class="faq-toggle">+</span>
+          </div>
+          <div class="faq-a">
+            Это документ, подтверждающий прохождение техосмотра и нужный для оформления ОСАГО. Вносится в базу ЕАИСТО.
+          </div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-q">Где проверить свою карту?
+            <span class="faq-toggle">+</span>
+          </div>
+          <div class="faq-a">
+            На сайте <a href="https://gibdd.ru" target="_blank" style="color:var(--green);">gibdd.ru</a> по VIN или номеру кузова.
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="contacts" class="section">
+      <div class="section-title">Контакты</div>
+      <div style="text-align:center;margin-bottom:16px;">
+        <b>Пункт №102</b><br>
+        Уфа, ул. Новочеркасская, 13/2<br>
+        <a href="tel:+79872589238" style="color:var(--green);text-decoration:none;font-weight:600">+7 (987) 258‑92‑38</a><br>
+        <a href="mailto:ufa.tehosmotr@yandex.ru" style="color:#444;text-decoration:underline;">ufa.tehosmotr@yandex.ru</a>
+      </div>
+      <div style="max-width: 550px; margin: 0 auto;">
+        <iframe class="map" style="height:200px;" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ae54ef236f130c882c8f8bfe02f7257dbf897bded7bd9cf57f59a8ef2d7203e03&amp;source=constructor" loading="lazy"></iframe>
+      </div>
+    </section>
+  </div>
+  <footer>
+    &copy; 2025 Пункт техосмотра Уфа &ndash; официальный сайт. <br>
+    ИП Газизова А.А., ОГРНИП 322028000092232, ИНН 027617127602
+  </footer>
+  <script>
+    // FAQ раскрытие
+    document.querySelectorAll('.faq-item').forEach(item => {
+      item.addEventListener('click', function() {
+        this.classList.toggle('open');
+      });
+    });
+  </script>
 </body>
 </html>
