--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
     .faq-item.open .faq-toggle{transform:rotate(45deg);}
     .faq-item .faq-a{max-height:0;overflow:hidden;opacity:0;transition:max-height .4s,opacity .32s;font-size:1em;margin-top:8px;}
     .faq-item.open .faq-a{max-height:500px;opacity:1;margin-top:13px;}
+    .big-map{display:flex;justify-content:center;}
+    .big-map iframe{width:100%;max-width:800px;height:340px;border-radius:14px;border:none;margin:auto;display:block;}
     footer{margin-top:60px;background:#f7faf7;padding:26px 0;text-align:center;color:#8b8b8b;font-size:15px;}
     @media (max-width:900px){.hero-row{flex-direction:column;gap:18px;align-items:stretch;}.hero-card{max-width:none;}}
-    @media (max-width:600px){.main-logo{width:90px;}nav.navbar{gap:10px;font-size:0.97em;}.container{padding:0 4px;}}
+    @media (max-width:600px){.main-logo{width:90px;}nav.navbar{gap:10px;font-size:0.97em;}.container{padding:0 4px;}.big-map iframe{height:180px;}}
   </style>
 </head>
 <body>
@@ -104,6 +106,7 @@
   <nav class="navbar">
     <a href="#services">Услуги</a>
     <a href="#prices">Цены</a>
+    <a href="#about-inspection">О техосмотре</a>
     <a href="#faq">Вопросы</a>
     <a href="#contacts">Контакты</a>
   </nav>
@@ -142,7 +145,7 @@
             Вс: выходной
           </div>
         </div>
-        <iframe class="map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Aec9b64fa31320aa337e2228180e61c7d3e36d438e6a24dc65d441d24631e28b8&amp;source=constructor" loading="lazy"></iframe>
+        <iframe class="map" src="https://yandex.ru/map-widget/v1/?ll=56.072328%2C54.805951&z=17&l=map&pt=56.072328,54.805951,pm2gnm" loading="lazy"></iframe>
       </div>
     </div>
     <section id="services" class="section">
@@ -153,8 +156,12 @@
           <p>Мотоциклы, мопеды и скутеры</p>
         </div>
         <div class="card"><i class="fas fa-car"></i>
-          <h3>B – M1, N1</h3>
-          <p>Легковые (до 8 мест), грузовые (до 3,5 т)</p>
+          <h3>B – M1</h3>
+          <p>Легковые (до 8 мест)</p>
+        </div>
+        <div class="card"><i class="fas fa-truck"></i>
+          <h3>N1</h3>
+          <p>Грузовые до 3,5 т</p>
         </div>
       </div>
     </section>
@@ -185,6 +192,13 @@
         </table>
       </div>
       <div style="color:#444;text-align:center;font-size:1em;opacity:.77;">Цены по постановлению №554 от 28.12.2024</div>
+    </section>
+    <section id="about-inspection" class="section">
+      <div class="section-title">О техосмотре</div>
+      <div style="max-width:760px;margin:0 auto 32px auto;line-height:1.6;font-size:1.12em;color:#333;opacity:.94;">
+        Все находящиеся в эксплуатации дорожные транспортные средства должны регулярно проходить технический осмотр для проверки соответствия технического состояния и оборудования транспортных средств требованиям безопасности дорожного движения.<br><br>
+        <b>Куда обратиться?</b> Техосмотр проводится организацией (оператором технического осмотра), прошедшим аккредитацию по проведению технического осмотра соответствующей категории транспортных средств. Проводит аккредитацию профессиональное объединение страховщиков. Граждане и юридические лица вправе обратиться к любому оператору независимо от места регистрации транспортного средства.
+      </div>
     </section>
     <section id="faq" class="section">
       <div class="section-title">Часто задаваемые вопросы</div>
@@ -269,8 +283,8 @@
         <a href="tel:+79272351405" style="color:var(--green);text-decoration:none;font-weight:600">+7 (927) 235‑14‑05</a><br>
         <a href="mailto:to1629271@gmail.com" style="color:#444;text-decoration:underline;">to1629271@gmail.com</a>
       </div>
-      <div style="max-width: 550px; margin: 0 auto;">
-        <iframe class="map" style="height:200px;" src="https://yandex.ru/map-widget/v1/?um=constructor%3Aec9b64fa31320aa337e2228180e61c7d3e36d438e6a24dc65d441d24631e28b8&amp;source=constructor" loading="lazy"></iframe>
+      <div class="big-map">
+        <iframe src="https://yandex.ru/map-widget/v1/?ll=56.072328%2C54.805951&z=17&l=map&pt=56.072328,54.805951,pm2gnm" loading="lazy"></iframe>
       </div>
     </section>
   </div>
